chg: Add central token authentication to swagger
